<resources>
    <string name="app_name" translatable="false">DecemberAi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="level">"Level: "</string>
    <string name="welcome_to_your_lessons">Welcome to your lessons</string>
    <string name="write_here">Write here </string>
    <string name="download">Loading</string>
    <string name="register_app">Register App</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_o_your_account">Login to your account</string>
    <string name="password">"Password: "</string>
    <string name="proficiency_level">"Proficiency level: "</string>
    <string name="change">change</string>
    <string name="reset">reset</string>
    <string name="status_payed">"Status payed: "</string>
    <string name="acquired_skills">"Acquired skills: "</string>
    <string name="to_pay">to pay</string>
    <string name="recomended">RECOMENDED</string>
    <string name="lessons">Lessons</string>
    <string name="practice">Practice</string>
    <string name="enter_the_login_information">Enter the login information</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="enter_all_the_registration_details">Enter all the registration details</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="your_level">Your Level</string>
    <string name="text_or_level_1">Take the test with the help of an assistant or choose your level yourself</string>
    <string name="text_or_level_2">You can return to the selection of your level at any time in your personal account</string>
    <string name="text_or_level_3">Your English proficiency level is currently set as</string>
    <string name="take_test">Take the test</string>
    <string name="start_learning">Start Learning</string>
    <string name="congratulate">Congratulate !!!</string>
    <string name="you_have_completed">You have completed</string>
    <string name="recommended">Recommended</string>
    <string name="continue_your_training">Continue your training !!!</string>
    <string name="completed">COMPLETED</string>
    <string name="enter_a_new_password">Enter a new password</string>
    <string name="changing_the_password">Changing the password</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="fill_in_all_the_fields">Fill in all the fields</string>
    <string name="the_passwords_do_not_match">The passwords do not match!</string>
    <string name="password_update_error_please_try_again">Password update error, please try again</string>
    <string name="password_has_been_successfully_updated">The password has been successfully updated</string>
    <string name="new_version_of_the_application_is_available">A new version of the application is available</string>
    <string name="the_user_has_been_successfully_logged_in">The user has been successfully logged in</string>
    <string name="user_authorization_error">User authorization error</string>
    <string name="the_user_level_has_been_updated">The user level has been updated</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_password_that_is_more_than_5_characters_long">Enter a password, that is more than 5 characters long</string>
    <string name="registration_was_successful">Registration was successful</string>
    <string name="registration_error_please_try_again">Registration error, please try again</string>
    <string name="authorization_was_successful">Authorization was successful</string>
    <string name="authorization_error">Authorization error</string>
    <string name="error_there_may_be_a_problem_with_the_internet">Error. There may be a problem with the Internet</string>
    <string name="tariff_settings">Tariff Settings</string>
    <string name="blocked">BLOCKED</string>
    <string name="you_have_run_out_of_tokens_on_your_tariff">You have run out of tokens on your tariff, either increase the tariff or wait for the tokens to be updated</string>
    <string name="check_your_internet_connection_and_repeat">Check your internet connection and repeat</string>
    <string name="the_waiting_time_has_expired">The waiting time has expired</string>


</resources>