<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chatPageContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424345"
    tools:context=".model.ChatPage">

    <ImageView
        android:id="@+id/chatPageImage"
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:transitionName="chatAnimations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_phyton_small" />

    <TextView
        android:id="@+id/chatPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/montserrat_bold"
        android:text="Название темы приходит при выпивании чашек кофе"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatPageImage" />


    <LinearLayout
        android:id="@+id/chatDivUrovenClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingEnd="25dp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatPageTitle">


        <TextView
            android:id="@+id/chatPageLevelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/chatPageLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="___"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:foregroundGravity="center_vertical|center"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/chatSayBatton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatDivUrovenClient"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:contentDescription="Описание вашего ScrollView"
            app:cardCornerRadius="20dp">

        </ScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chatRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/chatWelcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/welcome_to_your_lessons"
            android:textSize="28dp" />


    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/chatMessageEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/write_here"
        android:layout_marginTop="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/chatSayBattonNew"
        app:layout_constraintEnd_toStartOf="@+id/chatSayBatton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ImageButton
        android:id="@+id/chatSayBatton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10sp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/chatSayBattonNew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chatMessageEditText"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@drawable/button_speak4" />

    <ImageView
        android:id="@+id/chatSayBattonNew"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/button_speak4" />


</androidx.constraintlayout.widget.ConstraintLayout>