<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:background="@drawable/gory_mobile2">

    <!-- TODO: Update blank fragment layout -->


    <androidx.cardview.widget.CardView
        android:layout_width="260dp"
        android:layout_height="260dp"
        app:cardBackgroundColor="@color/white"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="30dp"
            android:textColor="@color/menu_ottenok_1"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/recomended" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/spiskiHomeRecycler"
            android:layout_width="195dp"
            android:layout_height="165dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="55dp"
            android:background="@color/white"
            android:padding="0dp"
            tools:listitem="@layout/spiski_home_item">


        </androidx.recyclerview.widget.RecyclerView>
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:paddingLeft="80dp"
            android:background="@color/white"
            android:paddingRight="80dp"
            android:layout_height="30dp"
            android:src="@drawable/volna"
            android:gravity="center"
            android:layout_marginTop="215dp"/>


    </androidx.cardview.widget.CardView>




    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_weight="1"
        android:src="@drawable/line" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_above="@+id/imageView4"
        android:paddingLeft="30sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:gravity="center|start"
            android:text="@string/acquired_skills"
            android:textColor="@color/menu_ottenok_3"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/home_skill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center|start"
            android:textStyle="bold"
            android:text="0 ★★★★★★"
            android:textColor="@color/menu_ottenok_3"
            android:textSize="14sp" />
    </LinearLayout>


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_above="@+id/linearLayout"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:src="@drawable/line" />


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="30sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/proficiency_level"
            android:textColor="@color/menu_ottenok_3"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/home_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center|start"
            android:textStyle="bold"
            android:text="Elementary"
            android:textColor="@color/menu_ottenok_3"
            android:textSize="14sp" />
    </LinearLayout>



</RelativeLayout>